--- a/main.html
+++ b/main.html
@@ -5,10 +5,89 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Table</title>
     <link rel="stylesheet" href="style.css" />
+	  <style>
+    table, th, td {
+      border: 1px solid black;
+      border-collapse: collapse;
+      padding: 8px;
+    }
+    .black-cell {
+      background-color: black;
+      color: white;
+    }
+  </style>
   </head>
   <body>
     <table style="width: 100%; height: 100%">
       <!-- Your code here -->
+		<table>
+  <tr>
+    <td>
+      <table>
+        <tr>
+          <th>Nested Table 1</th>
+          <th>Column 1</th>
+          <th>Column 2</th>
+        </tr>
+        <tr>
+          <td>Row 1</td>
+          <td>Data 1</td>
+          <td>Data 2</td>
+        </tr>
+      </table>
+    </td>
+    <td>
+      <table>
+        <tr>
+          <th>Nested Table 2</th>
+          <th>Column 1</th>
+          <th>Column 2</th>
+        </tr>
+        <tr>
+          <td>Row 1</td>
+          <td class="black-cell">HTML</td>
+          <td>Data</td>
+        </tr>
+      </table>
+    </td>
+  </tr>
+  <tr>
+    <td>
+      <table>
+        <tr>
+          <th>Nested Table 3</th>
+          <th>Column 1</th>
+          <th>Column 2</th>
+        </tr>
+        <tr>
+          <td>Row 1</td>
+          <td>Data 1</td>
+          <td>Data 2</td>
+        </tr>
+      </table>
+    </td>
+    <td>
+      <table>
+        <tr>
+          <th>Nested Table 4</th>
+          <th>Column 1</th>
+          <th>Column 2</th>
+        </tr>
+        <tr>
+          <td>
+            <ul>
+              <li>List item 1</li>
+              <li>List item 2</li>
+              <li>List item 3</li>
+            </ul>
+          </td>
+          <td>Data</td>
+          <td>Data</td>
+        </tr>
+      </table>
+    </td>
+  </tr>
+</table>
     </table>
   </body>
 </html>
