--- a/main.html
+++ b/main.html
@@ -21,73 +21,55 @@
     <table style="width: 100%; height: 100%">
       <!-- Your code here -->
 		<table>
-  <tr>
-    <td>
-      <table>
-        <tr>
-          <th>Nested Table 1</th>
-          <th>Column 1</th>
-          <th>Column 2</th>
+		<tr>
+		<td>
+		<table>
+		<tr>
+		<th>Nested Table 1</th>
         </tr>
-        <tr>
-          <td>Row 1</td>
-          <td>Data 1</td>
-          <td>Data 2</td>
-        </tr>
-      </table>
-    </td>
-    <td>
-      <table>
-        <tr>
-          <th>Nested Table 2</th>
-          <th>Column 1</th>
-          <th>Column 2</th>
-        </tr>
-        <tr>
-          <td>Row 1</td>
-          <td class="black-cell">HTML</td>
-          <td>Data</td>
-        </tr>
-      </table>
-    </td>
-  </tr>
-  <tr>
-    <td>
-      <table>
-        <tr>
-          <th>Nested Table 3</th>
-          <th>Column 1</th>
-          <th>Column 2</th>
-        </tr>
-        <tr>
-          <td>Row 1</td>
-          <td>Data 1</td>
-          <td>Data 2</td>
-        </tr>
-      </table>
-    </td>
-    <td>
-      <table>
-        <tr>
-          <th>Nested Table 4</th>
-          <th>Column 1</th>
-          <th>Column 2</th>
-        </tr>
-        <tr>
-          <td>
-            <ul>
-              <li>List item 1</li>
-              <li>List item 2</li>
-              <li>List item 3</li>
-            </ul>
-          </td>
-          <td>Data</td>
-          <td>Data</td>
-        </tr>
-      </table>
-    </td>
-  </tr>
-</table>
-    </table>
+		<tr>
+		<td>
+		<ul>	
+		<li>List item 1</li>
+		<li>List item 2</li>
+		<li>List item 3</li>
+		</ul>
+		</td>
+		</tr>
+		</table>
+		<table>
+		<tr>
+		<th colspan=2>Nested Table 2</th>
+		</tr>
+		<tr>
+		<th>Column 1</th>
+		<th>Column 2</th>
+		</tr>
+		<tr>
+		<td>abc</td>
+		<td>def</td>
+		</tr>
+	   </table>
+			<table>
+				<tr>
+					<th>Nested Table 3</th>
+				</tr>
+				<tr>
+					<td><a href="">Nested Table</a></td>
+					<td>Demo Continued</td>
+				</tr>
+			</table>
+			<table>
+				<tr>
+					<th>Nested Table 4</th>
+				</tr>
+				<tr>
+					<td class="black-cell">HTML</td>
+				</tr>
+			</table>
+		</td>
+		</tr>
+		</table>
+		     
   </body>
 </html>
